--- a/gzpn-spc-csl/src/main/webapp/VAADIN/themes/GzpnSpcCsl/styles.css
+++ b/gzpn-spc-csl/src/main/webapp/VAADIN/themes/GzpnSpcCsl/styles.css
@@ -14781,7 +14781,7 @@ div.v-layout.v-horizontal.v-widget {
 }
 
 .GzpnSpcCsl .gzpn-head {
-	background-color: #fafafa;
-	background-image: -webkit-linear-gradient(top, #d2e2f1 2%, #fafafa 98%);
-	background-image: linear, to bottom, #d2e2f1 2%, #fafafa 98%;
+	background-color: #d2e2f1;
+	background-image: -webkit-linear-gradient (top, #d2e2f1 2%, #fafafa 98%);
+	background-image: linear-gradient(to bottom, #d2e2f1 2%, #fafafa 98%);
 }
