--- a/gzpn-spc-csl/src/main/resources/templates/login.html
+++ b/gzpn-spc-csl/src/main/resources/templates/login.html
@@ -2,38 +2,217 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+
 <head>
-	<title>Gazprom-Neft CSL Demo</title>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link rel="stylesheet"
-		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <title>Bakery</title>
+  
+  <link rel="shortcut icon" href="VAADIN/themes/GzpnSpcCsl/favicon.ico" />
+  
+  <!--<link rel="icon" sizes="192x192" href="VAADIN/themes/GzpnSpcCsl/icon-192.png">
+  <link rel="icon" sizes="96x96" href="VAADIN/themes/GzpnSpcCsl/icon-96.png"
+  
+  <link rel="apple-touch-icon" sizes="192x192" href="VAADIN/themes/GzpnSpcCsl/icon-192.png">
+  <link rel="apple-touch-icon" sizes="96x96" href="VAADIN/themes/GzpnSpcCsl/icon-96.png">>-->
+  
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  
+  <!-- Enable these to hide browser controls when app is started from homescreen:
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  -->
+    
+  <script type="text/javascript">
+    var init = function() {
+      if (window.location.hash) {
+        document.getElementById("theform").action += window.location.hash;
+      }
+      if (window.location.search.indexOf("error")>0) {
+          document.body.className = "error";
+      }
+    }
+    
+  </script>
+	<style>
+		@font-face {
+			font-family: "Open Sans";
+			src: url(VAADIN/themes/valo/fonts/open-sans/OpenSans-Light-webfont.woff) format("woff");
+			font-weight: 300;
+			font-style: normal;
+		}
+		@font-face {
+			font-family: "Open Sans";
+			src: url(VAADIN/themes/valo/fonts/open-sans/OpenSans-Semibold-webfont.woff) format("woff");
+			font-weight: 600;
+			font-style: normal;
+		}
+		
+    html {
+    	/*background-image: linear-gradient(145deg, #709ce4a1 30%, #fbfafa 100%);*/
+    }
+    @media (min-width: 1000px) {
+      /* load on wide screens */
+      body {
+        background-color: transparent;
+        /*background-image: url(VAADIN/themes/GzpnSpcCsl/img/GPN_cluster.jpg);*/
+        background-size: cover;
+      }
+    }
+    button {
+    	background-color: #506fc3;
+    }
+    #logo {
+      display: inline-block;
+      background-image: url(VAADIN/themes/GzpnSpcCsl/img/Logo.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+		/* Layout */
+	*, *:before, *:after {
+      box-sizing: border-box;
+    }
+	html, body {
+			height: 100%;
+			font: 100 16px/1.55 "Open Sans", sans-serif;
+			margin: 0;
+	}
+	#info {
+       color: #aaa;
+       text-align: center;
+       padding: 28px;
+	}
+	#form {
+			height: 100%;
+			display: flex;
+			background-color: rgba(245,245,245,.2);
+			justify-content: center;
+    }
+    /* Responsive behaviour */	
+	@media (max-width: 1000px) {
+		h2 {
+        	display: none;
+      	}
+	}
+		
+	@media (min-width: 1001px) {
+	    body {
+	      display: flex;
+	      align-items: center;
+	      justify-content: center;
+	    }
+	    #logo {
+	        width:128px;
+        	height:64px;
+	    }
+	    #info, #form {
+	      height: 450px;
+	      box-shadow: 0 2px 3px rgba(0,0,0,.2);
+	    }
+	    #info {
+          background-color: rgba(225,225,225,.2);
+	      width: 465px;
+	      border-radius: 5px 0 0 5px;
+	    }
+	    #form {
+	      width: 320px;
+	      padding: 28px;
+	      border-radius: 0 5px 5px 0;
+	    }
+    }
+		
+		/* Elements / components theme */
+		
+		h1 {
+			font-size: 36px;
+			font-weight: 100;
+		}	
+		h2 {
+			font-size: 28px;
+			font-weight: 100;
+			margin-bottom: 14px;
+		}	
+		form {
+			max-width: 320px;
+		}
+		label {
+			font-size: 14px;
+			padding: 16px 0 5px 0;
+			display: inline-block; 
+		}	
+		input[type='text'],
+		input[type='password'] {
+			width: 100%;
+			
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			-ms-appearance: none;
+			-o-appearance: none;
+			appearance: none;
+			
+			font: inherit;
+			font-size: 14px;
+			
+			height: 37px;
+			border-radius: 4px;
+			padding: 4px 9px;
+			border: 1px solid rgba(0,0,0,.2);
+		}
+		button {
+			width:100%;
+			margin-top: 37px;
+			height: 37px;
+			border: 1px solid #666;
+			border-radius: 4px;
+			background-image: linear-gradient(to bottom,rgba(255,255,255,0.2) 2%, rgba(0,0,0,0.1) 98%);
+			box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 -1px 0 rgba(0, 0, 0, 0.2), 0 2px 3px rgba(0, 0, 0, 0.05);
+			outline: none;
+			cursor: pointer;
+			color: #fff;
+			text-align: center;
+			position: relative;
+			font: inherit;
+			font-weight: 600;
+		}
+		#button-submit:focus:after {
+			box-shadow: 0 0 0 2px rgba(0,0,0,.5);
+			content: "";
+			position: absolute;
+			top: -2px;
+			right: -2px;
+			bottom: -2px;
+			left: -2px;
+			border-radius: inherit;
+		}
+		.error input {
+			display: block;
+			border-color: red;
+		}
+		.error form:after {
+			content: "The username and password you entered do not match our records. Please double-check and try again.";
+			display: block;
+			border: 1px solid red;
+			border-radius: 4px;
+			width: 100%;
+			margin-top: 16px;
+			font-size: 14px;
+			padding: 8px;
+		}
+	</style>
 </head>
-<body class="container" style="margin:50px">
-	<div class="row col-sm-6" 
-				style="border: 1px ridge #003312; padding:20px; float: none; margin: 100px 50% 0 50%;">
-		<h5 class="text-center" style="font-size: 25px">Gazprom-Neft CSL Demo</h5>
-		<div th:if="${error}">
-			<p style="color: red">UserName or PassWord is wrong. Please
-				check again!</p>
-		</div>
-		<div th:if="${param.logout}">
-			<h1 style="color: blue">Logged out.</h1>
-		</div>
+<body onload="init()">
+	<div id="info">
+		<div id="logo"></div>
+		<h1>SPC CSL Demo</h1>
+		<p>admin + admin <br> user + user</p>
+	</div>
+	<div id="form">
 		<form th:action="${contextPath}" method="post">
-			<div class="form-group">
-				<label for="username">User Name: </label>
-				<input type="text" class="form-control" id="username" placeholder="Enter UserName" name="username"/>
-			</div>
-			<div class="form-group">
-				<label for="password">Password: </label>
-				<input type="password" class="form-control" id="password" placeholder="Enter Password" name="password"/>
-			</div>
-			<button type="submit" class="btn btn-primary btn-block">Submit</button>
+			<h2>Sign in</h2>
+			<label id="login-label" for="login">Login</label>
+			<input type="text" id="login" name="username" aria-labelledby="login-label" autofocus>
+			<label id="password-label" for="password">Password</label>
+			<input type="password" id="password" name="password" aria-labelledby="password-label">
+			<button id="button-submit" type="submit">Sign in</button>
 		</form>
 	</div>
 </body>
