The navigation menu has been added

--- a/gzpn-spc-csl/src/main/resources/templates/login.html
+++ b/gzpn-spc-csl/src/main/resources/templates/login.html
@@ -203,7 +203,7 @@
 	<div id="info">
 		<div id="logo"></div>
 		<h1 th:text="#{logon.label.title}"></h1>
-		<p>admin + admin <br> user + user</p>
+		<p>admin + secret <br> user + secret</p>
 	</div>
 	<div id="form">
 		<form th:action="${contextPath}" method="post">
