--- a/gzpn-spc-csl/src/main/webapp/VAADIN/themes/GzpnSpcCsl/gzpnspccsl.scss
+++ b/gzpn-spc-csl/src/main/webapp/VAADIN/themes/GzpnSpcCsl/gzpnspccsl.scss
@@ -37,10 +37,12 @@
 	@include valo;
 
 	.gzpn-head {
-		background-color: #d2e2f1;
+		background-color: rgba(215,215,215,.2);
+		/*background-color: #d2e2f1;
 		//background-image: v-linear 8%;
 		background-image: -webkit-linear-gradient (top, #d2e2f1 2%, #fafafa 98%);
 		background-image: linear-gradient(to bottom, #d2e2f1 2%, #fafafa 98%);
+		*/
 	}
 	
 }
