BpmnViewer with ability of tasks highlighting

--- a/gzpn-spc-csl/src/main/java/ru/gzpn/spc/csl/ui/js/bpmnio/bpmn_connector.css
+++ b/gzpn-spc-csl/src/main/java/ru/gzpn/spc/csl/ui/js/bpmnio/bpmn_connector.css
@@ -1,27 +1,48 @@
-      html, body, #canvas {
-        height: 100%;
-        padding: 0;
-        margin: 0;
-      }
-      
-      .diagram-note {
-        background-color: rgba(66, 180, 21, 0.7);
-        color: White;
-        border-radius: 5px;
-        font-family: Arial;
-        font-size: 12px;
-        padding: 5px;
-        min-height: 16px;
-        width: 50px;
-        text-align: center;
-      }
-      
-      .needs-discussion:not(.djs-connection) .djs-visual > :nth-child(1) {
-        stroke: rgba(66, 180, 21, 0.7) !important; /* color elements as red */
-      }
-      
-      #save-button {
-        position: fixed;
-        bottom: 20px;
-        left: 20px;
-      }
+html, body, #canvas {
+	height: 100%;
+	padding: 0;
+	margin: 0;
+}
+
+.diagram-note {
+	background-color: rgba(190, 180, 21, 0.7);
+	color: White;
+	border-radius: 5px;
+	font-family: Arial;
+	font-size: 12px;
+	padding: 5px;
+	min-height: 16px;
+	width: 50px;
+	text-align: center;
+}
+
+.needs-discussion:not (.djs-connection ) .djs-visual>:nth-child(1) {
+	stroke: rgba(6, 180, 21, 0.7) !important; /* color elements as red */
+}
+
+#save-button {
+	position: fixed;
+	bottom: 20px;
+	left: 20px;
+}
+
+.completed-overlay {
+	background-color: blue; 
+	opacity: 0.3;
+	pointer-events: none;
+	border-radius: 5px;
+}
+
+.active-overlay {
+	background-color: green;
+	opacity: 0.3;
+	pointer-events: none;
+	border-radius: 5px;
+}
+
+.created-overlay {
+	background-color: yellow;
+	opacity: 0.3;
+	pointer-events: none;
+	border-radius: 5px;
+}
