--- a/gzpn-spc-csl/src/main/java/ru/gzpn/spc/csl/ui/js/bpmnio/bpmn.css
+++ b/gzpn-spc-csl/src/main/java/ru/gzpn/spc/csl/ui/js/bpmnio/bpmn.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'bpmn';
-  src: url('../font/bpmn.eot?70672887');
-  src: url('../font/bpmn.eot?70672887#iefix') format('embedded-opentype'),
-       url('../font/bpmn.woff?70672887') format('woff'),
-       url('../font/bpmn.ttf?70672887') format('truetype'),
-       url('../font/bpmn.svg?70672887#bpmn') format('svg');
+  src: url('/demo/VAADIN/themes/GzpnSpcCsl/bpmnio/bpmn.eot?70672887');
+  src: url('/demo/VAADIN/themes/GzpnSpcCsl/bpmnio/bpmn.eot?70672887#iefix') format('embedded-opentype'),
+       url('/demo/VAADIN/themes/GzpnSpcCsl/bpmnio/bpmn.woff?70672887') format('woff'),
+       url('/demo/VAADIN/themes/GzpnSpcCsl/bpmnio/bpmn.ttf?70672887') format('truetype'),
+       url('/demo/VAADIN/themes/GzpnSpcCsl/bpmnio/bpmn.svg?70672887#bpmn') format('svg');
   font-weight: normal;
   font-style: normal;
 }
